# AlgoViewer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.bat  main.cpp  sorting_algorithms.cpp
.github/workflows/: main.yml
src/: Algorithms.cpp  Algorithms.hpp  App.cpp  App.hpp  Stack.cpp  Stack.hpp  UIManager.cpp  UIManager.hpp  Visualizer.cpp  Visualizer.hpp  main.cpp
